--- a/Front/src/css/admin.css
+++ b/Front/src/css/admin.css
@@ -134,7 +134,7 @@
     margin-bottom: 15px;
 }
 #boardConDown{
-    height: calc(100%-65px);
+    height: calc(100% - 65px);
     display: flex;
 }
 #boardConDL{
@@ -146,50 +146,27 @@
     float: right;
     margin-bottom: 20px;
 }
-.list-container {
+.pieContainer{
+    width: 100%;
+    max-height: 630px; /* 높이 자동 조절 */
+    aspect-ratio: 1 / 1; /* 정사각형 유지 */
     display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.left-list, .right-list {
-    width: 45%;
-    list-style-type: none;
-}
-.left-list{
-    padding: 5%;
-    align-items: stretch;
-}
-.left-list li{
+    justify-content: center;
     align-items: center;
-    flex-grow: 1;
-    padding: 5%;
-}
-.right-list{
-    height: 120px;
-    font-size: 14px;
-    background-color: #ededed;
-    padding: 3% 0;
-}
-.right-list li{
-    padding: 3%;
-}
-.right-list li{
-    padding: 3%;
-}
-.left-list li span, .right-list li span{
-    float: right;
 }
 #boardConDR{
     height: 100%;
     flex: 1;
 }
 #boardConDRU, #boardConDRD{
-    height: 50%;
+    height: 49%;
 }
 #boardConDRU{
     margin-bottom: 15px;
+}
+#boardConDRU div {
+    width: 70%;
+    margin: 0 auto;
 }
 /* 차트 컨테이너 스타일 */
 .chart-container {
@@ -202,7 +179,7 @@
 
 /* 차트 박스 */
 .chart-box {
-    width: 90%;
+    width: 60%;
     max-width: 600px;
     padding: 20px;
     border: 1px solid #ddd;
@@ -442,11 +419,12 @@
     border: 1px solid #f1f1f1;
     color: #999;
 }
-.sBtn:hover{ /*공통 버튼 디자인 (마우스 올렸을 때) */
+.sBtn:hover, .sBtn.bdactive{ /*공통 버튼 디자인 (마우스 올렸을 때) */
     background-color: #fff;
     border: 1px solid #999;
     color: #555;
 }
+
 /*사용자 관리 CSS*/
 #umMainBox{
     width: 100%;
