--- a/Front/src/css/login.css
+++ b/Front/src/css/login.css
@@ -137,3 +137,37 @@
     float: right;
     background-color: #999;
 }
+.wbAll {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 300px;
+    height: 100%;
+    margin: 0 auto;
+}
+.wbAll h1 {
+    font-size: 1.5rem; /* 타이틀 크기 */
+    margin-bottom: 10px; /* 타이틀 간격 */
+    color: #333; /* 텍스트 색상 */
+}
+
+.wbAll img {
+    width: 100px; /* 아이콘 크기 */
+    height: auto;
+    margin: 10px 0; /* 상하 간격 */
+}
+
+.wbAll p {
+    font-size: 1rem; /* 기본 텍스트 크기 */
+    margin: 15px 0; /* 각 줄 간격을 15px로 조정 */
+    color: #555; /* 텍스트 색상 조정 */
+}
+
+.wbAll .temp {
+    font-size: 2rem; /* 온도 크기 */
+    font-weight: bold;
+    margin: 30px 0; /* 상하 간격 */
+    color: #000; /* 온도 텍스트 색상 */
+}
