--- a/Front/src/css/admin.css
+++ b/Front/src/css/admin.css
@@ -265,7 +265,7 @@
     height: 100%;
 }
 #clMainBox div{
-    width: 170px;
+    width: 200px;
     height: fit-content;
     float: left;
     text-align: center;
@@ -313,14 +313,14 @@
     margin-bottom: 30px;
 }
 .pmConChatR .pmClova{
-    margin-left:20%;
-    padding-right: 80px;
+    padding-left: 70px;
     background-color: #fff;
     background-image: url(../assets/omClova.png);
     background-repeat: no-repeat;
-    background-position: right 10px top 10px;
+    background-position: left 10px top 10px;
 }
 .pmConChatR .pmAnser{
+    margin-left:20%;
     background-color: #d9d9d9;
 }
 
