--- a/Front/src/css/admin.css
+++ b/Front/src/css/admin.css
@@ -276,6 +276,9 @@
     height: auto;
     margin-bottom: 10px;
 }
+#clMainBox div > .sBtn:nth-child(3){
+    margin-top: 20px;
+}
 
 /*병해충 AI 검색 CSS*/
 #pmMainBox{
