--- a/Front/src/css/admin.css
+++ b/Front/src/css/admin.css
@@ -115,6 +115,40 @@
     border: 1px solid #f1f1f1;
     line-height: 10px;
     text-align: center;
+    margin: 0 2%;
+}
+#messageBtn{
+    width: 120px;
+}
+
+/*모달창*/
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal-content {
+    position: relative;
+    width: 50vw;
+    height: 60vh;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    overflow-y: auto;
+}
+.modal-content button{
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 /*대시보드 css*/
