--- a/Front/src/css/admin.css
+++ b/Front/src/css/admin.css
@@ -154,6 +154,7 @@
 /*대시보드 css*/
 
 #boardMainPage{
+    position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -164,10 +165,55 @@
     background-color: #fff;
 }
 #boardConUp{
-    height: 50px;
-    margin-bottom: 15px;
+    padding-top: 10px;
+    position: absolute;
+    overflow: hidden;
+    transition: height 0.3s ease-in-out;
+}
+#boardConUp > .content > div{
+    float: left;
+}
+#boardConUp span{
+    font-size: 10px;
+    font-weight: 500;
+
+}
+/* 접혀있는 상태 */
+.collapsed {
+    height: 40px;
+}
+
+/* 펼쳐진 상태 */
+.expanded {
+    height: 200px;
+    overflow-y: auto;
+}
+.details {
+    width: calc(100% - 200px);
+    float: left;
+    margin-left: 20px;
+    transition: opacity 0.3s ease-in-out;
+}
+.details p{
+    width: 100%;
+    margin-bottom: 10px;
+}
+.details span{
+    margin-right: 5%;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 20%;
+    padding: 10px;
+    text-align: center;
+}
+.toggle-button{
+    margin-right: 5%;
 }
 #boardConDown{
+    margin-top: 50px;
     height: calc(100% - 65px);
     display: flex;
 }
@@ -712,7 +758,60 @@
     margin-bottom: 2%;
 }
 
-
+/*병해충 검색 시 결과 리스트 AdminDpList*/
+#adDlMainBox{
+    width: 100%;
+    height: 100%;
+}
+.AdDlConImg, .AdDlConTitle{
+    float: left;
+    height: 200px;
+}
+.AdDlConImg{
+    width: 200px;
+    padding: 10px;
+    margin-right: 20px;
+}
+.AdDlConImg img{
+    width: 100%;
+    height: auto;
+    border-radius: 0px;
+}
+.borderB{
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    height: auto;
+    border-bottom: 1px solid #ededed;
+}
+.AdDlConTitle{
+    width: calc(100% - 300px);
+    height: auto;
+    padding: 50px 0px;
+}
+.AdDlConTitle p{
+    float: left;
+}
+.AdDlConTitle p span:nth-of-type(2){
+    display: inline-block;
+    width: 100px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    border: 1px solid #ededed;
+    margin-left: 20px;
+}
+.AdDlConTitle > p > span:nth-of-type(3){
+    display: inline-block;
+    width: 100% !important;
+    padding-top: 20px;
+    font-size: 20px;
+}
+.AdDlConTitle button{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
 /*스크롤 공통 CSS*/
 .scroll{
     overflow-y: auto;
