--- a/Front/src/css/jip.css
+++ b/Front/src/css/jip.css
@@ -49,8 +49,10 @@
 
 .joinText{
     width: 100%;
+    height: 430px;
     padding: 20px;
     background-color: rgba(255, 255, 255, 1);
+    overflow: hidden;
 }
 
 .joinText{
@@ -86,6 +88,54 @@
 .jipLiLast{
     margin-top: 170%;
 }
+#joinBox{
+    width: 100%;
+    height: 100%;
+}
+#joinBox .sBtn{
+    float: right;
+    width: 80px;
+    height: 25px;
+    padding: 5px;
+    font-size: 10px;
+}
+
+#toggleSlider {
+    display: none;
+}
+
+.toggleSlider label{
+    cursor: pointer;
+    width: 100px;
+    height: 50px;
+    background-color: #e0e0e0;
+    border-radius: 25px;
+    position:relative;
+    transition: 0.5s ease-out;
+    color:rgba(209, 209, 209, 0);
+    margin-left: 10%;
+}
+.toggleSlider label::after {
+    content: ''; 
+    width: 8px; 
+    height: 8px;
+    background-color: #fff;
+    position: absolute;
+    border-radius: 50%;
+    top: 20%;
+    left: 20%;
+    transform: translate(-50%);
+    transition: 0.5s ease-out;
+}
+#toggleSlider:checked + label {
+    background-color: #20d51a;
+}
+
+#toggleSlider:checked + label::after {
+    left:80%;
+    background-color: #fff;
+}
+
 
 /*배경 이미지 투명도 조절*/
 
