--- a/Front/src/css/jip.css
+++ b/Front/src/css/jip.css
@@ -78,8 +78,8 @@
 }
 .jipInput{
     width: 198px;
-    font-size: 10px;
-    color: rgba(209, 209, 209, 1);
+    font-size: 12px;
+    color: #555;
     border: none;
     border-bottom: 0.5px solid rgba(209, 209, 209, 1);
     border-radius: 0px;
